# quick-recipe

./: .gitignore  README.md  helpers.py  pyproject.toml  wsgi.py
app/: __init__.py  extensions.py  mailing.py
app/auth/: routes.py
app/forms/auth/: login.py  register.py
app/main/: routes.py
app/search/: routes.py
app/static/css/: bootstrap-social.css  style.css
app/static/js/: main.js
app/templates/: base.html
app/templates/auth/: authentication.html  form_reset_change_password.html  reset_email.html
app/templates/macros/: _render_field.html
app/templates/main/: index.html
app/templates/search/: details.html
