[project]
name = "quick-recipe"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.0.1",
    "cachelib==0.10.2",
    "cachetools==5.3.1",
    "Flask==2.3.2",
    "Flask-Bcrypt==1.0.1",
    "Flask-DebugToolbar==0.13.1",
    "Flask-Session==0.5.0",
    "Flask-Share==0.1.1",
    "Flask-SQLAlchemy==3.0.3",
    "Flask-WTF==1.1.1",
    "google-auth==2.19.1",
    "google-auth-oauthlib==1.0.0",
    "gunicorn==20.1.0",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "psycopg2-binary==2.9.6",
    "requests==2.31.0",
    "requests-cache==1.0.1",
    "requests-oauthlib==1.3.1",
    "SQLAlchemy==2.0.12",
    "Werkzeug==2.3.3",
    "WTForms==3.0.1",
]
